# Point-Cloud-Detection

./: .gitattributes  .gitignore  README.md  pyproject.toml  r3d_to_point_cloud.ipynb  requirements.txt  run_client.py  run_r3d_inference.py  run_s3dis_inference.py  run_server.py  run_training.py
client/: README_CLIENT.md  api.py  demo_client.py  requirements.txt  visualize.py
common/: __init__.py  r3d.py
configs/: config.yaml
configs/dataset/: r3d.yaml  s3dis.yaml  s3dis_preprocessed.yaml
configs/env/: colab.yaml  kaggle.yaml  remote.yaml
configs/inference/: r3d.yaml  s3dis.yaml
configs/metrics/: s3dis.yaml
configs/training/: colab_exp_1_pretrained_low_lr.yaml  colab_exp_2_pretrained_medium_lr.yaml  exp_1.yaml  exp_2_full.yaml  (+4 more)
data/: README.md
experiments/: train_exp_1.py
notebooks/: colab_end_to_end_softgroup_r3d.ipynb  colab_experiments.ipynb  kaggle_01_prepare_s3dis_preprocessed.ipynb  kaggle_02_run_project_end_to_end.ipynb  kaggle_03_crop3_preprocess_and_end_to_end.ipynb  kaggle_end_to_end_softgroup_r3d.ipynb  kaggle_experiments.ipynb
scripts/: compute_s3dis_metrics.py  download_softgroup_checkpoints.py  generate_softgroup_configs.py  infer.py  install_dependencies_and_build_softgroup.py  patch_softgroup_for_kaggle.py  precompute_s3dis_inference.py  prepare_kaggle_env.py  prepare_s3dis.py  r3d_frame_annotator.py  setup_all.py  show_gt_compare_plot.py  show_gt_compare_table.py  show_room.py  show_room_bbox.py  show_room_instance_seg.py  show_s3dis_rooms.py  train.py
server/: Dockerfile  app.py  config.py  core.py  requirements.txt  schemas.py
(+25 files in other folders)
